[package]
name = "waveform_space"
version = "0.1.0"
authors = ["Joseph Mark <sjeohp@gmail.com>"]
license = "MIT"
description = "compute distance between waveforms in feature space"
repository = "https://github.com/sjeohp/waveform_space.git"
keywords = ["waveform", "mfcc", "audio", "analysis"]

[dependencies]
rustfft = "*"
num = "*"
stream-dct = "*"
rand = "*"

[lib]
name = "waveform_space"
path = "src/lib.rs"